--- a/contactus.html
+++ b/contactus.html
@@ -53,8 +53,29 @@
         </div>
         </div>
     </header>
-    <!---contactus page starts here -->
-    <!--ends here-->
+    <form class="contact-form">
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" placeholder="Enter your name" required>
+
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" placeholder="Enter your email" required>
+
+        <label for="subject">Subject:</label>
+        <input type="text" id="subject" name="subject" placeholder="Enter subject" required>
+
+        <label for="message">Message:</label>
+        <textarea id="message" name="message" rows="5" placeholder="Write your message" required></textarea>
+
+        <button type="submit">Send Message</button>
+    </form>
+</main>
+
+
+<footer class="amazon-footer">
+    <p>&copy; 2023 Amazon Clone. All Rights Reserved.</p>
+</footer>
+
+<script src="/js/contactus.js"></script>
 </body>
 
 </html>
