--- a/product.html
+++ b/product.html
@@ -102,37 +102,37 @@
         <!-- Horizontal Scroller for Different Product Types -->
         <div class="horizontal-scroll">
             <div class="scroll-card">
-                <img height="225 px"; width=" 225px"; style="object-fit: cover;" src="Asset/products/" alt="Type 1">
+                <img height="225 px"; width=" 225px"; style="object-fit: cover;" src="Asset/products/watch.webp" alt="Type 1">
                 <h4>Watches</h4>
                 <button class="add-to-cart">ADD TO CART</button>
             </div>
             <div class="scroll-card">
-                <img height="225 px"; width=" 225px"; style="object-fit: cover;" src="Asset/products/" alt="Type 1">
+                <img height="225 px"; width=" 225px"; style="object-fit: cover;" src="Asset/products/ring.jpg" alt="Type 1">
                 <h4>Ring</h4>
                 <button class="add-to-cart">ADD TO CART</button>
             </div>
             <div class="scroll-card">
-                <img height="225 px"; width=" 225px"; style="object-fit: cover;" src="Asset/products/" alt="Type 1">
+                <img height="225 px"; width=" 225px"; style="object-fit: cover;" src="Asset/products/shoe.png" alt="Type 1">
                 <h4>Shoe</h4>
                 <button class="add-to-cart">ADD TO CART</button>
             </div>
             <div class="scroll-card">
-                <img height="225 px"; width=" 225px"; style="object-fit: cover;" src="Asset/products/" alt="Type 1">
+                <img height="225 px"; width=" 225px"; style="object-fit: cover;" src="Asset/products/belt.jpg" alt="Type 1">
                 <h4>Belt</h4>
                 <button class="add-to-cart">ADD TO CART</button>
             </div>
             <div class="scroll-card">
-                <img height="225 px"; width=" 225px"; style="object-fit: cover;" src="Asset/products/" alt="Type 1">
+                <img height="225 px"; width=" 225px"; style="object-fit: cover;" src="Asset/products/tie.jpg" alt="Type 1">
                 <h4>Tie</h4>
                 <button class="add-to-cart">ADD TO CART</button>
             </div>
             <div class="scroll-card">
-                <img height="225 px"; width=" 225px"; style="object-fit: cover;" src="Asset/products/" alt="Type 1">
+                <img height="225 px"; width=" 225px"; style="object-fit: cover;" src="Asset/products/handbag.jpg" alt="Type 1">
                 <h4>Handbag</h4>
                 <button class="add-to-cart">ADD TO CART</button>
             </div>
             <div class="scroll-card">
-                <img height="225 px"; width=" 225px"; style="object-fit: cover;" src="Asset/products/" alt="Type 1">
+                <img height="225 px"; width=" 225px"; style="object-fit: cover;" src="Asset/products/muffler.avif" alt="Type 1">
                 <h4>Socks n Muffler</h4>
                 <button class="add-to-cart">ADD TO CART</button>
            
