--- a/contactus.html
+++ b/contactus.html
@@ -56,6 +56,7 @@
 
     <div class="contact-container">
         <h1>Contact Us</h1>
+        <p>If you have any questions, feel free to reach out to us.</p>
         <form class="contact-form">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" placeholder="Enter your name" required>
