Add product images to Our Products page

--- a/product.html
+++ b/product.html
@@ -61,37 +61,37 @@
         <div class="products-grid">
             <!-- Six cards of the same product type -->
             <div class="product-card">
-                <img height="300px"; width="400px"; style="object-fit: cover;" src="Assets/images-3.jpeg" alt="Product 1">
+                <img height="300px"; width="400px"; style="object-fit: cover;" src="Asset/products/phones.webp" alt="Product 1">
                 <h3>Phones</h3>
                 <p>Check Here</p>
                 <button class="add-to-cart">ADD TO CART</button>
             </div>
             <div class="product-card">
-                <img height="300px"; width="400px"; style="object-fit: cover;" src="Assets/editing-laptop-2048px-231551-2x1-1.jpg.webp" alt="Product 2">
+                <img height="300px"; width="400px"; style="object-fit: cover;" src="Asset/products/laptops.jpg" alt="Product 2">
                 <h3>Laptops</h3>
                 <p>Check Here</p>
                 <button class="add-to-cart">ADD TO CART</button>
             </div>
             <div class="product-card">
-                <img height="300px"; width="400px"; style="object-fit: cover;" src="Assets/gaming-pc.jpeg" alt="Product 3">
+                <img height="300px"; width="400px"; style="object-fit: cover;" src="Asset/products/pcs.jpg" alt="Product 3">
                 <h3>PCs</h3>
                 <p>Check Here</p>
                 <button class="add-to-cart">ADD TO CART</button>
             </div>
             <div class="product-card">
-                <img height="300px"; width="400px"; style="object-fit: cover;" src="Assets/images-3 2.jpeg" alt="Product 4">
+                <img height="300px"; width="400px"; style="object-fit: cover;" src="Asset/products/apple-products.webp" alt="Product 4">
                 <h3>Apple Products</h3>
                 <p>Check Here</p>
                 <button class="add-to-cart">ADD TO CART</button>
             </div>
             <div class="product-card">
-                <img height="300px"; width="400px"; style="object-fit: cover;" src="Assets/Designer-27-1.jpeg" alt="Product 5">
+                <img height="300px"; width="400px"; style="object-fit: cover;" src="Asset/products/home-appliances.jpg" alt="Product 5">
                 <h3>Home Appliances</h3>
                 <p>Check Here</p>
                 <button class="add-to-cart">ADD TO CART</button>
             </div>
             <div class="product-card">
-                <img height="300px"; width="400px"; style="object-fit: cover;" src="Assets/images-1-jpeg.jpeg" alt="Product 6">
+                <img height="300px"; width="400px"; style="object-fit: cover;" src="Asset/products/electronic-accessories.avif" alt="Product 6">
                 <h3>Electronics Accessories</h3>
                 <p>Check Here</p>
                 <button class="add-to-cart">ADD TO CART</button>
@@ -102,37 +102,37 @@
         <!-- Horizontal Scroller for Different Product Types -->
         <div class="horizontal-scroll">
             <div class="scroll-card">
-                <img height="225 px"; width=" 225px"; style="object-fit: cover;" src="Assets/Unknown.jpeg" alt="Type 1">
+                <img height="225 px"; width=" 225px"; style="object-fit: cover;" src="Asset/products/watch.webp" alt="Type 1">
                 <h4>Watches</h4>
                 <button class="add-to-cart">ADD TO CART</button>
             </div>
             <div class="scroll-card">
-                <img height="225 px"; width=" 225px"; style="object-fit: cover;" src="Assets/ring.jpeg" alt="Type 1">
+                <img height="225 px"; width=" 225px"; style="object-fit: cover;" src="Asset/products/ring.jpg" alt="Type 1">
                 <h4>Ring</h4>
                 <button class="add-to-cart">ADD TO CART</button>
             </div>
             <div class="scroll-card">
-                <img height="225 px"; width=" 225px"; style="object-fit: cover;" src="Assets/shoes.jpeg" alt="Type 1">
+                <img height="225 px"; width=" 225px"; style="object-fit: cover;" src="Asset/products/shoe.png" alt="Type 1">
                 <h4>Shoe</h4>
                 <button class="add-to-cart">ADD TO CART</button>
             </div>
             <div class="scroll-card">
-                <img height="225 px"; width=" 225px"; style="object-fit: cover;" src="Assets/blet.jpeg" alt="Type 1">
+                <img height="225 px"; width=" 225px"; style="object-fit: cover;" src="Asset/products/belt.jpg" alt="Type 1">
                 <h4>Belt</h4>
                 <button class="add-to-cart">ADD TO CART</button>
             </div>
             <div class="scroll-card">
-                <img height="225 px"; width=" 225px"; style="object-fit: cover;" src="Assets/tie.webp" alt="Type 1">
+                <img height="225 px"; width=" 225px"; style="object-fit: cover;" src="Asset/products/tie.jpg" alt="Type 1">
                 <h4>Tie</h4>
                 <button class="add-to-cart">ADD TO CART</button>
             </div>
             <div class="scroll-card">
-                <img height="225 px"; width=" 225px"; style="object-fit: cover;" src="Assets/handbag.jpeg" alt="Type 1">
+                <img height="225 px"; width=" 225px"; style="object-fit: cover;" src="Asset/products/handbag.jpg" alt="Type 1">
                 <h4>Handbag</h4>
                 <button class="add-to-cart">ADD TO CART</button>
             </div>
             <div class="scroll-card">
-                <img height="225 px"; width=" 225px"; style="object-fit: cover;" src="Assets/socks.jpeg" alt="Type 1">
+                <img height="225 px"; width=" 225px"; style="object-fit: cover;" src="Asset/products/muffler.avif" alt="Type 1">
                 <h4>Socks n Muffler</h4>
                 <button class="add-to-cart">ADD TO CART</button>
            
