--- a/login.html
+++ b/login.html
@@ -9,10 +9,11 @@
 </head>            
    
 <body>
-    <header>
+     <!---Add your navbar here with all the pages linked to it-->
+     <header>
         <div class="navbar">
             <div class="logo">
-                <a href="/index.html"><img src="/Asset/icons8-amazon-50.png"></a>  
+              <a href="/index.html"><img src="/Asset/icons8-amazon-50.png"></a>  
             </div>
             <div class="location">
                 <span>Deliver to Thane 400601</span>
