--- a/product.html
+++ b/product.html
@@ -9,10 +9,12 @@
 </head>                
 
 <body>   
+     <!---Add your navbar here with all the pages linked to it-->
+      <!---Add your navbar here with all the pages linked to it-->
     <header>
         <div class="navbar">
             <div class="logo">
-                <a href="/index.html"><img src="/Asset/icons8-amazon-50.png"></a>  
+              <a href="/index.html"><img src="/Asset/icons8-amazon-50.png"></a>  
             </div>
             <div class="location">
                 <span>Deliver to Thane 400601</span>
@@ -53,7 +55,6 @@
         </div>
         </div>
     </header>
-</div>
 
     <!----create products cards here with hover effect and responsiveness------>
     <div class="container">
