Updated contact us page

--- a/contactus.html
+++ b/contactus.html
@@ -9,11 +9,11 @@
 </head>
 
 <body>
-     <!---Add your navbar here with all the pages linked to it-->
-     <header>
+    <!-- Add your navbar here with all the pages linked to it -->
+    <header>
         <div class="navbar">
             <div class="logo">
-              <a href="/index.html"><img src="/Asset/icons8-amazon-50.png"></a>  
+              <a href="/index.html"><img src="/Asset/icons8-amazon-50.png" alt="Logo"></a>
             </div>
             <div class="location">
                 <span>Deliver to Thane 400601</span>
@@ -21,7 +21,7 @@
             </div>
             <div class="search-bar">
                 <select>
-                    <option>All</option>          
+                    <option>All</option>
                 </select>
                 <input type="text" placeholder="Search Amazon.in">
                 <button>
@@ -30,32 +30,31 @@
             </div>
             <div class="account-links">
                 <div><a href="/login.html">Login</a></div>
-            <div><a href="/Signup.html">SignUp</a></div>
-            <div><a href="/product.html" class="cart">
-                <img src="/Asset/icons8-cart-50.png" alt="Cart Icon">
-                Our Products
-            </a></div>
-            <div><a href="/contactus.html">Contact Us</a></div>
+                <div><a href="/Signup.html">SignUp</a></div>
+                <div><a href="/product.html" class="cart">
+                    <img src="/Asset/icons8-cart-50.png" alt="Cart Icon"> Our Products
+                </a></div>
+                <div><a href="/contactus.html">Contact Us</a></div>
             </div>
         </div>
         <div class="sub-navbar">
             <div class="boxsub">
-            <a href="#">All</a>
-            <a href="#">Fresh</a>
-            <a href="#">MX Player</a>
-            <a href="#">Sell</a>
-            <a href="#">Best Sellers</a>
-            <a href="#">Today's Deals</a>
-            <a href="#">Mobiles</a>
-            <a href="#">Electronics</a>
-            <a href="#">Home & Kitchen</a>
-            <a href="#">Prime</a>
-            <a href="#">Customer Service</a>
-        </div>
+                <a href="#">All</a>
+                <a href="#">Fresh</a>
+                <a href="#">MX Player</a>
+                <a href="#">Sell</a>
+                <a href="#">Best Sellers</a>
+                <a href="#">Today's Deals</a>
+                <a href="#">Mobiles</a>
+                <a href="#">Electronics</a>
+                <a href="#">Home & Kitchen</a>
+                <a href="#">Prime</a>
+                <a href="#">Customer Service</a>
+            </div>
         </div>
     </header>
 
-    <div class="contact-container">
+    <main class="contact-container">
         <h1>Contact Us</h1>
         <p>If you have any questions, feel free to reach out to us.</p>
         <form class="contact-form">
@@ -73,7 +72,7 @@
 
             <button type="submit">Send Message</button>
         </form>
-    </div>
+    </main>
 
     <footer class="amazon-footer">
         <p>&copy; 2023 Amazon Clone. All Rights Reserved.</p>
